# sdl3-vapi

./: .editorconfig  .gitignore  .valalintignore  LICENSE.md  README.md  meson.build  meson_options.txt
docs/: meson.build
examples/: meson.build
examples/AsyncIO/01-Load-Bitmaps/: App.vala  meson.build
examples/Audio/01-Simple-Playback/: App.vala  meson.build
examples/Audio/02-Simple-Playback-Callback/: App.vala  meson.build
examples/Audio/03-Load-Wav/: App.vala  meson.build
examples/Audio/04-Multiple-Streams/: App.vala  meson.build
examples/Camera/01-Read-and-Draw/: App.vala  meson.build
examples/Demos/01-Snake/: App.vala  Context.vala  Data.vala  meson.build
examples/GPU/: CommonGPU.vala  CommonMath3D.vala  meson.build
examples/GPU/01-Basic-Triangle/: App.vala  meson.build
examples/GPU/02-Basic-Vertex-Buffer/: App.vala  meson.build
examples/GPU/04-Rotating-Cube/: App.vala  ColorCube.vala  meson.build
examples/Input/01-Joystick-Polling/: App.vala  meson.build
examples/Input/02-Joystick-Events/: App.vala  meson.build
examples/Main/01-Simple/: App.vala  meson.build
examples/Main/02-MainHandled/: App.vala  meson.build
examples/Main/03-MainHandledCallbacks/: App.vala  meson.build
examples/Main/03-MainHandledCallbacksPosix/: App.vala  meson.build
examples/Main/04-CCodeCallbacks/: App.vala  meson.build
examples/Main/04-MainHandledCallbacksGLib/: App.vala  meson.build
examples/Main/04-MainHandledCallbacksPosix/: App.vala  meson.build
examples/Main/05-CCodeCallbacks/: App.vala  meson.build
examples/Pen/01-Drawing-Lines/: App.vala  meson.build
examples/Renderer/01-Clear/: App.vala  meson.build
examples/Renderer/02-Primitives/: App.vala  meson.build
examples/Renderer/03-Lines/: App.vala  meson.build
examples/Renderer/04-Points/: App.vala  meson.build
examples/Renderer/05-Rectangles/: App.vala  meson.build
examples/Renderer/06-Textures/: App.vala  meson.build
examples/Renderer/07-Streaming-Textures/: App.vala  meson.build
examples/Renderer/08-Rotating-Textures/: App.vala  meson.build
examples/Renderer/09-Scaling-Textures/: App.vala  meson.build
examples/Renderer/10-Geometry/: App.vala  meson.build
examples/Renderer/11-Color-Mods/: App.vala  meson.build
examples/Renderer/14-Viewport/: App.vala  meson.build
examples/Renderer/15-Clip-Rect/: App.vala  meson.build
examples/Renderer/17-Read-Pixels/: App.vala  meson.build
examples/Renderer/18-Debug-Text/: App.vala  meson.build
examples/SDLImage/01-Load-Image/: App.vala
examples/SDLImage/02-Load-Animation/: App.vala  meson.build
examples/SDLImage/03-Load-Image-IO/: App.vala
examples/SDL_Image/01-Load-Image/: meson.build
examples/SDL_Image/02-Load-Animation/: App.vala
examples/SDL_Image/03-Load-Image-IO/: meson.build
examples/SDL_TTF/01-Hello-World/: App.vala  meson.build
examples/SDL_TTF/02-Text-Engine/: App.vala  meson.build
examples/SDL_TTF/03-Text-Engine-GPU/: App.vala  ContextGpu.vala  ContextTtf.vala  Data.vala  Math3D.vala  meson.build
examples/data/shaders/compiled/DXIL/: GPUText.vert.dxil  GPUTextSDF.frag.dxil  PositionColorModelView.vert.dxil  RawTriangle.vert.dxil
examples/data/shaders/compiled/MSL/: PositionColorModelView.vert.msl
examples/data/shaders/compiled/SPIRV/: PositionColorModelView.vert.spv
examples/data/shaders/source/: GPUTextSDF.frag.hlsl  PositionColor.vert.hlsl  PositionColorModelView.vert.hlsl  README.md  build_shaders.sh
tests/: TestError.vala  TestLog.vala  TestProperties.vala  TestVersion.vala  meson.build
vapi/: sdl3-image.vapi  sdl3-ttf.vapi  sdl3.vapi
