glib_dep = dependency('glib-2.0')
gobject_dep = dependency('gobject-2.0')
sdl3_dep = dependency('sdl3')
sdl3_image_dep = dependency('sdl3-image')

# SDL
subdir('Main/01-Simple')
subdir('Main/02-MainHandled')
subdir('Main/03-MainHandledCallbacksPosix')
subdir('Main/04-MainHandledCallbacksGLib')
subdir('Main/05-CCodeCallbacks')

subdir('Renderer/01-Clear')
subdir('Renderer/02-Primitives')
subdir('Renderer/03-Lines')
subdir('Renderer/04-Points')
subdir('Renderer/05-Rectangles')
subdir('Renderer/06-Textures')
subdir('Renderer/07-Streaming-Textures')
subdir('Renderer/08-Rotating-Textures')
subdir('Renderer/09-Scaling-Textures')
subdir('Renderer/10-Geometry')
subdir('Renderer/11-Color-Mods')
subdir('Renderer/14-Viewport')
subdir('Renderer/15-Clip-Rect')
subdir('Renderer/17-Read-Pixels')
subdir('Renderer/18-Debug-Text')

subdir('Input/01-Joystick-Polling')
subdir('Input/02-Joystick-Events')

subdir('Audio/01-Simple-Playback')
subdir('Audio/02-Simple-Playback-Callback')
subdir('Audio/03-Load-Wav')
subdir('Audio/04-Multiple-Streams')

subdir('Camera/01-Read-and-Draw')

subdir('AsyncIO/01-Load-Bitmaps')

subdir('Pen/01-Drawing-Lines')

subdir('Demos/01-Snake')

# SDL Image
subdir('SDL_Image/01-Load-Image')
subdir('SDL_Image/02-Load-Animation')
subdir('SDL_Image/03-Load-Image-IO')